some css to align the canvas zone with the html lists (that's the issue when mixing both techs)

--- a/fieldsLinker.css
+++ b/fieldsLinker.css
@@ -14,6 +14,7 @@
 	padding-left:0px;
 	font-weight:normal;
 }
+
 .fieldsLinker li {
 	border:solid 1px grey;
 	padding:5px 2px 5px 8px;
@@ -27,12 +28,16 @@
 	background-color:#fff;
 	background: linear-gradient(#ffffff, #e9e9e9);
 	color:black;
-	border-radius : 10px;
+	border-radius : 0px;
 }
 
 .fieldsLinker li[data-mandatory='true']{
 	background-color:#D7504C;
 	background: linear-gradient(#D7504C, #C12F2B);
 	color:white;
+}
+
+.FL-mid{
+    /*margin-top:-4px !important;*/ /* à corriger*/
 }
 
